syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Covid19Api.Grpc.GlobalStatistics";

service GlobalStatisticsService {
  rpc LoadLatestGlobalStatistics (google.protobuf.Empty) returns (GlobalStatisticsGrpcMessage);
  rpc LoadHistoricalGlobalStatistics (google.protobuf.Empty) returns (GlobalStatisticsHistoryGrpcMessage);
}

message GlobalStatisticsHistoryGrpcMessage {
  repeated GlobalStatisticsGrpcMessage globalStatistics = 1;
}

message GlobalStatisticsGrpcMessage {
  int32 active = 1;
  int32 deaths = 2;
  int32 recovered = 3;
  int32 total = 4;
  google.protobuf.Timestamp fetchedAt = 5;
}